--- a/SnapGallery/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/SnapGallery/Resources/Base.lproj/LaunchScreen.storyboard
@@ -16,14 +16,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bcK-F9-c1r">
-                                <rect key="frame" x="76" y="362" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.angled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bcK-F9-c1r">
+                                <rect key="frame" x="76.666666666666686" y="361.66666666666669" width="240" height="128"/>
                                 <color key="tintColor" name="CustomBlack"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="2Wd-r6-ExY"/>
+                                    <constraint firstAttribute="height" constant="128.66999999999999" id="Z5e-jX-VHl"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="AccentColor"/>
+                        <constraints>
+                            <constraint firstItem="bcK-F9-c1r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="S09-VI-cUx"/>
+                            <constraint firstItem="bcK-F9-c1r" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UD3-Ag-tca"/>
+                            <constraint firstItem="bcK-F9-c1r" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cbV-Oq-doS"/>
+                            <constraint firstItem="bcK-F9-c1r" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="seA-Vi-FVv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -34,7 +43,7 @@
     <resources>
         <image name="photo.on.rectangle.angled" catalog="system" width="128" height="98"/>
         <namedColor name="AccentColor">
-            <color red="0.98799997568130493" green="0.83899998664855957" blue="0.14100000262260437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.9882352941176471" green="0.83921568627450982" blue="0.14117647058823529" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="CustomBlack">
             <color red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
